@@ -1,110 +1,0 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<ClassDiagram MajorVersion="1" MinorVersion="1">
-  <Class Name="Banking.MainWindow">
-    <Position X="6" Y="7.25" Width="3" />
-    <TypeIdentifier>
-      <HashCode>AAACJAAAAAAAAAAQQZJAAAZAAAAAAIAAAgAAQKAgBBE=</HashCode>
-      <FileName>Views\MainWindow.xaml.cs</FileName>
-    </TypeIdentifier>
-    <ShowAsAssociation>
-      <Field Name="MainMV" />
-    </ShowAsAssociation>
-    <Lollipop Position="0.2" />
-  </Class>
-  <Class Name="Banking.ModelViews.MainModelView">
-    <Position X="11" Y="7.25" Width="2.5" />
-    <AssociationLine Name="Accounts" Type="Banking.Models.Bank" FixedFromPoint="true" FixedToPoint="true">
-      <Path>
-        <Point X="13.5" Y="9.312" />
-        <Point X="14.594" Y="9.312" />
-        <Point X="14.594" Y="7.161" />
-      </Path>
-    </AssociationLine>
-    <TypeIdentifier>
-      <HashCode>EAEACCFCBAABAIIgggDEgEAExgEBAQCAAChAAABECIE=</HashCode>
-      <FileName>ModelViews\MainModelView.cs</FileName>
-    </TypeIdentifier>
-    <ShowAsAssociation>
-      <Field Name="View" />
-      <Property Name="Options" />
-    </ShowAsAssociation>
-    <ShowAsCollectionAssociation>
-      <Property Name="Accounts" />
-      <Property Name="Balances" />
-      <Property Name="Imports" />
-      <Property Name="CurrentBalances" />
-    </ShowAsCollectionAssociation>
-    <Lollipop Position="0.2" />
-  </Class>
-  <Class Name="Banking.Models.Bank">
-    <Position X="14.5" Y="3.75" Width="1.5" />
-    <TypeIdentifier>
-      <HashCode>AAACAAAAAAAAAAAAEAQAAASAAAAACAAFAAAACAgQAEE=</HashCode>
-      <FileName>Models\Bank.cs</FileName>
-    </TypeIdentifier>
-  </Class>
-  <Class Name="Banking.Models.Balance">
-    <Position X="17" Y="10.5" Width="1.5" />
-    <TypeIdentifier>
-      <HashCode>AAAAAAAAAAAAAIAAAAAAAAQAwAAEAAAAAQAAAAAAAAA=</HashCode>
-      <FileName>Models\Balance.cs</FileName>
-    </TypeIdentifier>
-    <Lollipop Position="0.2" />
-  </Class>
-  <Class Name="Banking.Models.Import">
-    <Position X="14.75" Y="12" Width="1.5" />
-    <TypeIdentifier>
-      <HashCode>AAACAAAAAAAAAAAAEACAAASAAAAACAABAAAACAAAAEE=</HashCode>
-      <FileName>Models\Import.cs</FileName>
-    </TypeIdentifier>
-  </Class>
-  <Class Name="Banking.ModelViews.OptionModelView">
-    <Position X="19.25" Y="9.5" Width="1.5" />
-    <TypeIdentifier>
-      <HashCode>IAAEACAgAAAAAIAAAAAAQAAAgAgAAAAAAAAAQAAAAAA=</HashCode>
-      <FileName>ModelViews\OptionModelView.cs</FileName>
-    </TypeIdentifier>
-    <Lollipop Position="0.2" />
-  </Class>
-  <Class Name="Banking.Models.CurrentBalance">
-    <Position X="17.75" Y="13.5" Width="1.5" />
-    <TypeIdentifier>
-      <HashCode>AAAAAAAAAAAAAAAAAAAAAAWAAAAAAAABAAAAAAAAAAA=</HashCode>
-      <FileName>Models\Balance.cs</FileName>
-    </TypeIdentifier>
-  </Class>
-  <Class Name="Banking.ModelViews.BankModelView">
-    <Position X="0.5" Y="0.5" Width="1.5" />
-    <TypeIdentifier>
-      <HashCode>AAAAAAAAAAAQAIAAEAAAAAACgAABAQCAAAACABBQAAA=</HashCode>
-      <FileName>ModelViews\BankModelView.cs</FileName>
-    </TypeIdentifier>
-    <ShowAsAssociation>
-      <Property Name="View" />
-      <Property Name="Db" />
-    </ShowAsAssociation>
-    <ShowAsCollectionAssociation>
-      <Property Name="Accounts" />
-    </ShowAsCollectionAssociation>
-    <Lollipop Position="0.2" />
-  </Class>
-  <Class Name="Banking.Views.BankWindow">
-    <Position X="4" Y="0.5" Width="2.25" />
-    <TypeIdentifier>
-      <HashCode>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAQAEAAAAAAAA=</HashCode>
-      <FileName>Views\BankWindow.xaml.cs</FileName>
-    </TypeIdentifier>
-    <ShowAsAssociation>
-      <Field Name="ModelView" />
-    </ShowAsAssociation>
-    <Lollipop Position="0.2" />
-  </Class>
-  <Class Name="Banking.Models.BankingDbContext">
-    <Position X="4" Y="3.5" Width="1.75" />
-    <TypeIdentifier>
-      <HashCode>AAAAAAAAAIAAAAAAAAAEAAAAAAAAAACAAAAAAAAAAAA=</HashCode>
-      <FileName>Models\BankingDbContext.cs</FileName>
-    </TypeIdentifier>
-  </Class>
-  <Font Name="Segoe UI" Size="9" />
-</ClassDiagram>
