@@ -11,7 +11,7 @@ using System.Windows;
 [assembly: AssemblyDescription("")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("CHi")]
-[assembly: AssemblyProduct("WPF-Banking")]
+[assembly: AssemblyProduct("Banking")]
 [assembly: AssemblyCopyright("Copyright © Kees Hiemstra 2019-2020")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
@@ -51,5 +51,5 @@ using System.Windows;
 // You can specify all the values or you can default the Build and Revision Numbers
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("2.0.5.50")]
-[assembly: AssemblyFileVersion("2.0.5.50")]
+[assembly: AssemblyVersion("2.1.0.51")]
+[assembly: AssemblyFileVersion("2.1.0.51")]
