@@ -2,12 +2,12 @@
 
 ### Wish list
 
-- [ ] Write the hard coded SQL statements in a extern json.
 - [ ] Make suggestions with SQL statements where are records with an empty "TalleName".
-- [ ] Make a splash screen.
 - [ ] Design an icon.
 - [ ] Bug: Pivot is not updated when a record is updated.
 - [ ] Bug: Previous account list when the cell is empty. 
+- [X] Make a splash screen.
+- [X] Write the hard coded SQL statements in a extern json.
 - [X] Change About to HistoryWindow with FlowDocument.
 - [X] Mark in the details the field [Mutation] when [TallyName] is null and [Mutation] = 'Incasso'.
 - [X] Update 'unexpected invoices'.
